--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,14 +15,16 @@ jobs:
         run: docker build -t visibilityspots/domain-watcher:dev .
 
       - name: Install Goss
-        uses: e1himself/goss-installation-action@v1.1.0
+        uses: e1himself/goss-installation-action@v1.2.1
         with:
-          version: 'v0.3.20'
+          version: 'v0.4.6'
 
       - name: Execute Goss tests
-        run: time dgoss run visibilityspots/domain-watcher:dev domain.org || ((i++))
+        env:
+          GOSS_FILES_STRATEGY: cp
+        run: dgoss run visibilityspots/domain-watcher:dev
 
-  buildx:
+  deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
@@ -30,20 +32,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Docker Login
-        uses: docker/login-action@v2.2.0
+        uses: docker/login-action@v3.1.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push latest
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
@@ -52,9 +54,10 @@ jobs:
           tags: |
             visibilityspots/domain-watcher:latest
             visibilityspots/domain-watcher:${{ github.ref_name }}
+          cache-from: type=registry,ref=visibilityspots/domain-watcher:buildcache
+          cache-to: type=registry,ref=visibilityspots/domain-watcher:buildcache,mode=max
 
       - name: Create github release
         uses: ncipollo/release-action@v1
         with:
           makeLatest: true
-
