--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -8,6 +8,8 @@ name: trivy
 on:
   push:
     branches: [ "master" ]
+    tags:
+      - '*'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "master" ]
