--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -57,7 +57,24 @@ jobs:
           cache-from: type=registry,ref=visibilityspots/domain-watcher:buildcache
           cache-to: type=registry,ref=visibilityspots/domain-watcher:buildcache,mode=max
 
+      - name: Update CHANGELOG
+        id: changelog
+        uses: requarks/changelog-action@v1
+        with:
+          token: ${{ github.token }}
+          tag: ${{ github.ref_name }}
+
       - name: Create github release
         uses: ncipollo/release-action@v1
         with:
           makeLatest: true
+          allowUpdates: true
+          body: ${{ steps.changelog.output.changes }}
+          token: ${{ github.token }}
+
+      - name: Commit CHANGELOG.md
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          branch: master
+          commit_message: 'docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]'
+          file_pattern: CHANGELOG.md
