chore(ci): using reusable workflows

--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -7,41 +7,6 @@ on:
   schedule:
     - cron: '44 19 * * 4'
 
-permissions:
-  contents: read
-
 jobs:
   scan:
-    permissions:
-      contents: read
-      security-events: write
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build an image from Dockerfile
-        run: |
-          docker build -t visibilityspots/domain-watcher:dev .
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.28.0
-        with:
-          image-ref: 'visibilityspots/domain-watcher:dev'
-          format: 'table'
-          exit-code: 0
-          ignore-unfixed: true
-          severity: 'CRITICAL,HIGH'
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.28.0
-        with:
-          image-ref: 'visibilityspots/domain-watcher:dev'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
-
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: 'trivy-results.sarif'
+    uses: visibilityspots/dockerfile-cloudflared/.github/workflows/trivy.yml@main
